# $Id: configure.in,v 1.1.1.1 2005-09-22 20:13:33 hww3 Exp $
AC_INIT(sample_config.h.in)

AC_MODULE_INIT()
# AC_CONFIG_HEADERS(xml2_config.h)

# PKG_CHECK_MODULES(XML2, libxml-2.0)
# PKG_CHECK_MODULES(XSLT, libxslt)

# CPPFLAGS="${CPPFLAGS} ${XML2_CFLAGS} ${XSLT_CFLAGS}"
# LDFLAGS="${LDFLAGS} ${XML2_LIBS} ${XSLT_LIBS}"

# AC_CHECK_HEADERS(libxml/parser.h)
# AC_CHECK_LIB(xml2, xmlCleanupParser) 

# AC_CHECK_FUNCS(xmlNewDocPI) 

# AC_SUBST(XML2_CFLAGS) 
# AC_SUBST(XML2_LIBS)

# AC_SUBST(XSLT_CFLAGS) 
# AC_SUBST(XSLT_LIBS)

AC_OUTPUT(Makefile)

